--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
  cdl.jedal,mnmpickjn;qapwjDANXS. OJALEKNFC MNL. ;  
+ cdnohefbjscncn ,m nkebckqbjbdc,  kwcb,jvbvkjv,  kansxsndoehfkbwnv,msnefpsehf,  
